skillsセクションの間隔調整: 開発初心者の登竜門とBeEngineerカリキュラムの間隔を統一

--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ body {
   font-size: 40px;
   font-weight: bold;
   color: #fff;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   text-align: center;
   display: block;
 }
@@ -1458,7 +1458,7 @@ body {
   font-size: 40px;
   font-weight: bold;
   color: #fff;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   text-align: center;
   display: block;
 }
@@ -1577,7 +1577,7 @@ body {
   font-size: 40px;
   font-weight: bold;
   color: #fff;
-  margin: 40px 0 0 710px;
+  margin: 8px 0 20px 710px;
   text-align: center;
   display: inline-block;
   position: relative;
