--- a/style.css
+++ b/style.css
@@ -249,6 +249,13 @@ body {
   overflow: visible;
   z-index: 1;
 }
+
+@media (max-width: 768px) {
+  .skills {
+    padding-top: 32px;
+    padding-bottom: 56px;
+  }
+}
 .skills::after {
   content: "";
   position: absolute;
