--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 
 html,
 body {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -103,6 +105,8 @@ body {
 }
 .hero {
   position: relative;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 600px;
   min-height: 100vh;
